--- a/todo-list-app/src/app/users/users/users.component.html
+++ b/todo-list-app/src/app/users/users/users.component.html
@@ -7,7 +7,7 @@
   </a> -->
 
   <strong>{{user.id}}</strong>
-  <span>{{user.name}}</span>
+  <span>{{user.firstName}}</span>
   <!-- <a href="#" (click)="edit(user)">Edit</a> -->
 </div>
 
